tests/parser/continue-statement-not-terminated.stderr
error: expected ';'
 --> $DIR/continue-statement-not-terminated.lox:1:23
  |
1 | while true { continue }
  |                       ^
